# my-database

./: .gitignore  CMakeLists.txt  main.c
headers/: error.h  inputbuffer.h  util.h
sources/: error.c  inputbuffer.c  util.c
